circle rigid body

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,4 +10,5 @@ target_sources(
           particle.cpp
           force.cpp
           app_rigid_body.cpp
+          shape.cpp
           body.cpp)
