add the world object

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,6 @@ target_sources(
           shape.cpp
           body.cpp
           collision_detection.cpp
-          contact.cpp)
+          contact.cpp
+          app_world.cpp
+          world.cpp)
