improve stability for stack of boxes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ target_sources(
           shape.cpp
           body.cpp
           collision_detection.cpp
-          contact.cpp
+          contact.h
           # app_world.cpp
           world.cpp
           vec_n.cpp
